--- a/dicee.html
+++ b/dicee.html
@@ -11,15 +11,14 @@
   </head>
   <body></body>
     <div class="container">
-      <h1>Refresh Me</h1>
-
+      <h1>Roll The Dice</h1>
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="images/dice6.png" />
+        <img class="img1" src="" />
       </div>
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="images/dice6.png" />
+        <img class="img2" src="" />
       </div>
     </div>
     <script src="index.js"></script>
