--- a/dicee.html
+++ b/dicee.html
@@ -9,16 +9,16 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body onload="runIt()">
     <div class="container">
       <h1>Roll The Dice</h1>
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="" />
+        <img class="img1" src="images/dice6.png" />
       </div>
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="" />
+        <img class="img2" src="images/dice6.png" />
       </div>
     </div>
     <script src="index.js"></script>
