--- a/dicee.html
+++ b/dicee.html
@@ -9,9 +9,9 @@
       rel="stylesheet"
     />
   </head>
-  <body onload="runIt()">
+  <body>
     <div class="container">
-      <h1>Roll The Dice</h1>
+      <h1>Start A New Game!</h1>
       <div class="dice">
         <p>Player 1</p>
         <img class="img1" src="images/dice6.png" />
