--- a/dicee.html
+++ b/dicee.html
@@ -1,8 +1,20 @@
+<!-- Purpose:    A simple dice game using html, css, JavaScript, and Bootstrap 5.
+     Programmer: William Hunt modified a project from the App Brewery.
+     Date:       9 July 2021
+ -->
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
     <title>Dicee</title>
+    <!--link to bootstrap and styles.css-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
@@ -11,7 +23,11 @@
   </head>
   <body>
     <div class="container">
-      <h1>Start A New Game!</h1>
+      <h1>Play Craps!</h1>
+      <!--Bootstrap styled Button to roll the dice-->
+      <div>
+        <button type="button" class="btn btn-success">Roll The Dice</button>
+      </div>
       <div class="dice">
         <p>Player 1</p>
         <img class="img1" src="images/dice6.png" />
@@ -21,7 +37,19 @@
         <img class="img2" src="images/dice6.png" />
       </div>
     </div>
+    <!--Link to index.js-->
     <script src="index.js"></script>
+    <!--JavaScript and Popper for Bootstrap-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
   </body>
 
   <footer>www 🎲 TheCodeDoctor 🎲 com</footer>
